Fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     max-height: 50rem;
     max-width: 50rem;
     padding: 0 0 0 10rem;
-    margin: 0 0 10rem 0;
+    margin: 0 0 10rem 30rem;
 }
 
 .header{
@@ -47,11 +47,12 @@ body{
 }
 
 .map{
-    margin: 20rem 0 20rem 0;
+    margin: 20rem 0rem 20rem 0;
+    padding: 0 0 0 20rem;
 }
 
 .gif{
-    min-height: 30rem;
+    min-height: 35rem;
 }
 
 .next-to-gif{
